src/test/resources/de/monticore/umlcd4a/cocos/ebnf/valid/C4A25.cd
package de.monticore.umlcd4a.cocos.ebnf.valid;

classdiagram C4A25 {

  class A {
    String attrA1;
    String attrA2;
    String attrA3;
    String attrA4;
    String attrA5;
    String attrA6;
  }

  class B;

  association attrA1 A <- B;
  association attrA6 B -> A;
}
